feat: implementing shopping list update and clearing items of shopping list
